--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,216 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Navbar Start */
+
+.navbar {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.logo {
+  width: 30px;
+}
+
+.navbar-nav li {
+  margin-left: 50px;
+}
+
+.nav-link {
+  background-color: #f3ec78;
+  background-image: linear-gradient(45deg, #24e4ac, #0ca4e4);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  font-weight: bold;
+}
+/* Navbar finish */
+
+/* Search Bar Start */
+.search-container {
+  background: #fff;
+  height: 35px;
+  border-radius: 30px;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.8s;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, .3),
+    -4px -4px 6px 0 rgba(116, 125, 136, .2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
+}
+
+.search-container:hover>.search-input {
+  width: 250px;
+}
+
+.search-container .search-input {
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  transition: 0.8s;
+
+}
+
+.search-container .search-btn .fas {
+  color: #5cbdbb;
+}
+
+@keyframes hoverShake {
+  0% {
+    transform: skew(0deg, 0deg);
+  }
+
+  25% {
+    transform: skew(5deg, 5deg);
+  }
+
+  75% {
+    transform: skew(-5deg, -5deg);
+  }
+
+  100% {
+    transform: skew(0deg, 0deg);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* Search Bar Finish */
+
+
+
+/* Global a  Start*/
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/* Global a  Finish*/
+
+/* Cards start */
+.card {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  color: black;
+}
+
+.card:hover {
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  color: black;
+  border: 1px solid #5cbdbb;
+}
+
+.fs {
+  font-size: 12px;
+}
+
+/* Cards finish */
+
+/* Login Sign Up start*/
+#logindiv {
+  min-height: 80.7vh;
+}
+
+#signupdiv {
+  min-height: 80.7vh;
+}
+
+#buttonsign {
+  width: 100px;
+  height: 25px;
+  margin-top: 20px;
+}
+
+.forminput>input {
+  border: none;
+  border-bottom: 1px solid #24e4ac;
+  margin-bottom: 10px;
+
+}
+
+.forminput>input:focus {
+  border: none;
+  border-bottom: 1px solid #24e4ac;
+  outline: none;
+
+}
+
+#signup {
+  color: #24e4ac;
+  ;
+  text-shadow: 0px 0px 1px black;
+}
+
+#buttonsign {
+  color: white;
+  background: #24e4ac;
+  border: none;
+  width: 130px;
+  height: 30px;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+
+#buttonsign>a {
+  font-size: 15px;
+}
+
+#buttonsign:hover {
+  color: white;
+  background: linear-gradient(45deg, #24e4ac, #0ca4e4);
+  border: none;
+  width: 130px;
+  height: 30px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  border-radius: 25px;
+}
+/* Login Sign Up finish*/
+
+/* Global Theme  start*/
+#dark,
+h2 {
+  background: linear-gradient(90deg, #5a5959, #272626);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#light {
+  background-color: white;
+
 }
 
-@keyframes App-logo-spin {
+/* Global Theme  finish*/
+
+/* Page Global start */
+.minHeight {
+  min-height: 80.6vh;
+}
+/* Page Global finish */
+
+/* Detail img start */
+.detailimg:hover {
+  width: 80%;
+  margin-top: 10px;
+  border-radius: 260px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  animation: backInLeft;
+  animation-duration: 800ms;
+  animation: rotatelogo1 5s linear infinite;
+}
+
+@keyframes rotatelogo1 {
   from {
-    transform: rotate(0deg);
-  }
-  to {
     transform: rotate(360deg);
   }
+
+  to {
+    transform: rotate(0deg);
+  }
 }
+/* Detail img finish */
